# cistern

./: .pre-commit-config.yaml  Makefile  README.md  _ansible.cfg  hosts  package.json  personal-server.yml  pyproject.toml  requirements.txt  scratch.md
ansible/: ansible.cfg  dotfiles.yml  inventory  main.yml
ansible/roles/arch/dotfiles/files/: .Xresources  .xinitrc
ansible/roles/arch/dotfiles/tasks/: main.yml
ansible/roles/arch/pacman/tasks/: main.yml
ansible/roles/arch/system-files/tasks/: main.yml
ansible/roles/arch/systemd/tasks/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/common/apps/tasks/: main.yml
ansible/roles/common/crontab/tasks/: main.yml
ansible/roles/common/dotfiles/: .gitconfig.j2
ansible/roles/common/dotfiles/files/: .gitignore_global  .less  .lesskey  .screenrc  .tmux.conf  .vimrc  .zshrc  .zshrc.old
ansible/roles/common/dotfiles/tasks/: main.yml
ansible/roles/common/dotfiles/templates/: .gitconfig.j2
ansible/roles/common/neovim/files/: init.vim  requirements.txt
ansible/roles/common/neovim/tasks/: main.yml
ansible/roles/common/scripts/files/: battery-notifier.sh  screens.zsh  spellcheck.py
ansible/roles/common/scripts/tasks/: main.yml
ansible/roles/common/virtualenv/tasks/: main.yml
ansible/roles/homebrew/tasks/: main.yml
ansible/roles/macos/chunkwm/files/: .chunkwmrc  .khdrc
ansible/roles/macos/chunkwm/tasks/: main.yml
ansible/roles/macos/tasks/: main.yml
ansible/roles/personal_server/tasks/: main.yml
tools/: get-virtualenv.py  install-starship.sh  install.sh  update.sh
(+57 files in other folders)
