[tool.poetry]
name = "cistern"
version = "0.1.0"
description = "dotfiles and system setup"
authors = ["Mark Larah <mark@larah.me>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9"
jinja2 = "^2.10.3"
pyyaml = "^5.3"
certifi = "^2019.11.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
